@@ -20,10 +20,12 @@ CURRENT VERSION:
 	MapEditor can load TEG/JTEG xml maps
 	Card Ownership view shows you the cards you own when you dont own the country in Yellow
 	online game setup ui fixes
+	FlashGUI will remember the number of dice you are attacking/defending with in a given battle
 
 	Android 37 nullpointer in 2 exit events fixed (hack)
 		   nullpointer in quit game and open stats activity at the same time fixed (hack)
 		   show errors in saving file as well as in downloading it to the user (IOException: No space left on device)
+		   on Android can select the number of dice to attack and defend
 	Android 36 grasshopper update
 		   game opening and hiding at same time/del and load auto.save in different threads fix
 		   AI error in map Artic Map (divide by zero if there is no way out of a continent) fixed
